# report-convertor

./: .env  .env.example  .gitignore  PROJECT_KNOWLEDGE.md  README.md  TEST_PLAN.md  main.py  output.xlsx  pyproject.toml  report-convertor-macos.spec  report-convertor.spec  report_convertor.spec  skills-lock.json  ~$output.xlsx
.github/workflows/: build.yml
docs/: PR.md
housing-pro-reports/: ActiveTenant .xlsx  Allowance.xlsx  Assets.xlsx  ClientDetail.xlsx  Deductions.xlsx  Incomes.xlsx  MTW.xlsx  Members.xlsx  Owner.xlsx  Programs.xlsx  RentHistoricals.xlsx  TTP.xlsx  Transactions.xlsx  UnitData.xlsx
report_convertor/: __init__.py
report_convertor/components/: __init__.py  destination_fields_list.py  editable_mapping_table.py  main_window.py  mapping_table.py  review_worker.py  s3_source_select_dialog.py  s3_template_select_dialog.py  searchable_combo_box.py  source_files_list.py  template_editor.py  template_editor_controller.py  (+1 more)
templates/: SampleTemplate.json  Test generate.json  TestGene.json  TestGenerate.json
tests/: conftest.py  test_generator.py  test_local_repository.py  test_main_window.py  test_mapping_table_widget.py  test_preview_table_widget.py  test_review_worker.py  test_s3_source_select_dialog.py  test_s3_template_select_dialog.py  test_searchable_combo_box.py  test_template_editor_controller.py  test_template_models.py  test_template_service.py
yardi-reports/: ActiveClients.xlsx  CaseManagers.xlsx  ClientContactDetail.xlsx  HousingProvider.xlsx  UtilitiesReport.xlsx  all_tenants.FDI.Assets.xlsx  all_tenants.FDI.Income.xlsx
(+25 files in other folders)
