[project]
name = "report-convertor"
version = "0.1.0"
description = "Excel mapping and reporting tool with shared GUI and CLI services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.7,<7.0",
    "pydantic>=2.11,<3.0",
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-qt>=4.4,<5.0",
]
packaging = [
    "pyinstaller>=6.13,<7.0",
]

[project.scripts]
report-convertor = "report_convertor.functions.entrypoint:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["report_convertor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
